objects/ssot__HealthScoreRangeClassification__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClassificationColorName__c</fullName>
        <label>Classification Color Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClassificationName__c</fullName>
        <label>Classification Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ColorHexadecimalCodeText__c</fullName>
        <label>Color Hexadecimal Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Health Score Range Classification Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RangeEndValueNumber__c</fullName>
        <label>Range End Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RangeStartValueNumber__c</fullName>
        <label>Range Start Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreCategoryId__c</fullName>
        <label>Score Category</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725828338_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthScoreRangeClassification_Score_rel</label>
        <referenceTo>ssot__HealthScoreCategory__dlm</referenceTo>
        <relationshipLabel>HealthScoreRangeClassification_Score_rel</relationshipLabel>
        <relationshipName>rel_1716725828338_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>